data addition 238pm

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
   <h2>wendyclock</h2>
 <ul id='timeline'>
+<li class='work'>
+    <input class='radio' id='428am' name='works' type='radio'>
+    <div class="relative">
+      <label for='428am'>Sen. Davis responds to the filibuster's success.</label>
+      <span class='date'>4:28 AM, 26 June 2013</span>
+      <span class='circle'></span>
+    <div class="content"><p>Senator Wendy Davis <a href="https://twitter.com/WendyDavisTexas/status/349821364695343104">tweets</a> "Thanks to the powerful voices of thousands of Texans, #SB5 is dead. An incredible victory for Texas women and those who love them."</p></div>
+    </div>
+  </li>
   <li class='work'>
     <input class='radio' id='318am' name='works' type='radio' checked>
     <div class="relative">
@@ -51,6 +60,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </div>
     <div class='content'>
       <p>Cecile Richards, president of the Planned Parenthood Federation of America, tweets that <a href="https://twitter.com/CecileRichards/statuses/349788778614890497">"Lt. Gov. David Dewhurst has agreed that #SB5 is dead."</a></p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='114am' name='works' type='radio'>
+    <div class="relative">
+      <label for='114am'>Becca Aaronson posts a <a href="pic.twitter.com/r7mdQXSu3J">picture</a> of hardcopy documents corroborating the altered date of the SB5 vote.</label>
+      <span class='date'>1:14 AM, 26 June 2013</span>
+      <span class='circle'></span>
+    <div class="content"><p>The picture, Aaronson <a href="https://twitter.com/becca_aa/status/349772548269027328">tweets</a>, is of Congressman Ruben Hinojosa holding up the documents.</p></div>
     </div>
   </li>
       <li class="work">
@@ -74,7 +92,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       </p>
     </div>
   </li>
-
+<li class='work'>
+    <input class='radio' id='1159pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1159pm'>Tweets about the filibuster peak at 4900 tweets in the one-minute period between 11:59 PM and midnight.</label>
+      <span class='date'>11:59 PM, 25 June 2013</span>
+      <span class='circle'></span>
+    <div class="content"><p>Tweet volume <a href="https://twitter.com/gov/status/349765191128461312">reported</a> at 12:44AM, 26 June 2013, by <a href="https://twitter.com/gov/">@gov</a>, the Twitter Government and Politics Team.</p></div>
+    </div>
+  </li>
     <li class='work'>
     <input class='radio' id='1145pm' name='works' type='radio'>
     <div class="relative">
