data addition 441pm

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='428am'>Sen. Davis responds to the filibuster's success.</label>
       <span class='date'>4:28 AM, 26 June 2013</span>
-      <span class='circle'></span>
+      <span class='circle'></span></div>
     <div class="content"><p>Senator Wendy Davis <a href="https://twitter.com/WendyDavisTexas/status/349821364695343104">tweets</a> "Thanks to the powerful voices of thousands of Texans, #SB5 is dead. An incredible victory for Texas women and those who love them."</p></div>
     </div>
   </li>
@@ -67,7 +67,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='114am'>Becca Aaronson posts a <a href="pic.twitter.com/r7mdQXSu3J">picture</a> of hardcopy documents corroborating the altered date of the SB5 vote.</label>
       <span class='date'>1:14 AM, 26 June 2013</span>
-      <span class='circle'></span>
+      <span class='circle'></span></div>
     <div class="content"><p>The picture, Aaronson <a href="https://twitter.com/becca_aa/status/349772548269027328">tweets</a>, is of Congressman Ruben Hinojosa holding up the documents.</p></div>
     </div>
   </li>
@@ -78,6 +78,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
       <span class="date">1:07 AM, 26 June 2013</span><span class="circle"></span></div>
     <div class="content">
       <p>The screenshots show alteration to the date of the SB5 vote. Note: Tweet is dated 2:07 AM, from Eastern Standard Timezone.</p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='1205am' name='works' type='radio'>
+    <div class="relative">
+      <label for='1205am'>Texas Tribune <a href="https://twitter.com/TexasTribune/status/349755256944599040">reports</a> that the vote on SB5 was 17-12, according to Sen. Deuell.</label>
+      <span class='date'>12:05 AM, 26 June 2013</span>
+      <span class='circle'></span>
+    <div class="content"><p></p></div>
     </div>
   </li>
   <li class='work'>
@@ -101,6 +110,24 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="content"><p>Tweet volume <a href="https://twitter.com/gov/status/349765191128461312">reported</a> at 12:44AM, 26 June 2013, by <a href="https://twitter.com/gov/">@gov</a>, the Twitter Government and Politics Team.</p></div>
     </div>
   </li>
+  <li class='work'>
+    <input class='radio' id='1156pm-a' name='works' type='radio'>
+    <div class="relative">
+      <label for='1156pm-a'>Screaming from the gallery drowns out action on the floor, preventing a vote</label>
+      <span class='date'>11:56 PM, 25 June 2013</span><!-- source: https://twitter.com/MorganSmith/status/349753006809546752 -->
+      <span class='circle'></span>
+    <div class="content"><p></p></div>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='1156pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1156pm'>CNN reporting on blueberry muffins instead of filibuster.</label>
+      <span class='date'>11:56 PM, 25 June 2013</span>
+      <span class='circle'></span>
+    <div class="content"><p>Elizabeth Plank provides <a href="https://twitter.com/feministabulous/status/349753120043188225">screencap</a> of CNN with blueberry muffin headline.</p></div>
+    </div>
+  </li>
     <li class='work'>
     <input class='radio' id='1145pm' name='works' type='radio'>
     <div class="relative">
@@ -110,7 +137,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </div>
       <div class="content" style="padding-bottom:30px;"><p></p></div>
   </li>
-
+<li class='work'>
+    <input class='radio' id='1104pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1104pm'>The rotunda at the legislature is <a href="pic.twitter.com/fGLy74e98M">filled with supporters</a> wearing orange.</label>
+      <span class='date'>11:04 PM, 25 June 2013</span>
+      <span class='circle'></span>
+    <div class="content"><p>Sen. Leticia Van De Putte <a href="https://twitter.com/leticiavdp/status/349740007977787393">tweets</a> the picture showing the support for Sen. Davis's filibuster.</p></div>
+    </div>
+  </li>
     <li class='work'>
     <input class='radio' id='1045pm' name='works' type='radio'>
     <div class="relative">
@@ -131,6 +166,15 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class='content'>
       <p>
       </p>
+    </div>
+  </li>
+  <li class='work'>
+    <input class='radio' id='1103-08pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1103-08pm'>Senator Wendy Davis <a href="https://twitter.com/WendyDavisTexas/status/349377348103188481">announces the SB5 vote</a> and asks for people to <a href=">share their stories</a< so she "can tell it from the Senate floor."</label>
+      <span class='date'>11:03-11:08 PM, 24 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p></p></div>
     </div>
   </li>
 
