data addition 516pm

--- a/index.html
+++ b/index.html
@@ -156,6 +156,50 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="content"><p></p></div>
   </li>
 
+<li class='work'>
+    <input class='radio' id='934pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='934pm'>A point of order is called as to the germaineness of Senator Davis' references to a 2011 bill 
+regarding the use of sonograms in abortions.</label>
+      <span class='date'>9:34 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p></p></div>
+    </div>
+  </li>
+  
+  <li class='work'>
+    <input class='radio' id='840pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='840pm'>President Obama <a href="">tweets</a> in support of Senator Davis.</label>
+      <span class='date'>8:40 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p>He comments that "Something special is happening in Austin tonight."</p></div>
+    </div>
+  </li>
+  
+  <li class='work'>
+    <input class='radio' id='638pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='638pm'>Point of Order called regarding the assistance Senator Davis received in putting on a back 
+brace.</label>
+      <span class='date'>6:38 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p></p></div>
+    </div>
+  </li>
+  
+  <li class='work'>
+    <input class='radio' id='533pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='533pm'>Second point of order called; later overruled</label>
+      <span class='date'>5:33 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p></p></div>
+    </div>
+  </li>
+  
+  
+
   <li class='work'>
     <input class='radio' id='1118am' name='works' type='radio'>
     <div class="relative">
@@ -184,7 +228,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='work1'>Lorem ipsum dolor sit amet</label>
       <span class='date'>08 May 2013</span>
-      <span class='circle'></span>
+      <span class='circle'></span></div>
     <div class="content"><p></p></div>
     </div>
   </li>
