--- a/index.html
+++ b/index.html
@@ -143,18 +143,36 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='1138pm'>Senator Van De Putte moves to adjourn and is ignored. <!--source: 
 https://twitter.com/TheVaginaZine/status/349748549694652416 --></label>
-      <span class='date'>9:34 PM, 25 June 2013</span>
+      <span class='date'>11:38 PM, 25 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p></p></div>
     </div>
   </li>
+<li class='work'>
+    <input class='radio' id='1109pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1109pm'>Senator Kirk Watson begins closing, filibusters the end of the filibuster.</label>
+      <span class='date'>11:09 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p><!--source: https://twitter.com/djambrek/status/349741154599829504 --></p></div>
+    </div>
+  </li>  
   
+  <li class='work'>
+    <input class='radio' id='1106pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1106pm'>The doors to the Texas legislature are locked, barring over 200 people from entry.</label>
+      <span class='date'>11:06 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p><!--source: https://twitter.com/SandiesPACk/status/349740440687345664 --></p></div>
+    </div>
+  </li>
 <li class='work'>
     <input class='radio' id='1104pm' name='works' type='radio'>
     <div class="relative">
       <label for='1104pm'>The rotunda at the legislature is <a href="pic.twitter.com/fGLy74e98M">filled with supporters</a> wearing orange.</label>
       <span class='date'>11:04 PM, 25 June 2013</span>
-      <span class='circle'></span>
+      <span class='circle'></span></div>
     <div class="content"><p>Sen. Leticia Van De Putte <a href="https://twitter.com/leticiavdp/status/349740007977787393">tweets</a> the picture showing the support for Sen. Davis's filibuster.</p></div>
     </div>
   </li>
@@ -163,6 +181,16 @@ https://twitter.com/TheVaginaZine/status/349748549694652416 --></label>
     <div class="relative">
       <label for='1045pm'>DPS locked the Capitol doors</label>
       <span class='date'>10:45 PM, 25 June 2013</span>
+      <span class='circle'></span>
+    </div>
+          <div class="content"><p></p></div>
+  </li>
+
+<li class='work'>
+    <input class='radio' id='1003pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1003pm'>With a third point of order sustained against her, Senator Davis' filibuster is brought to an end.</label>
+      <span class='date'>10:03 PM, 25 June 2013</span>
       <span class='circle'></span>
     </div>
           <div class="content"><p></p></div>
@@ -227,7 +255,7 @@ brace.</label>
   <li class='work'>
     <input class='radio' id='1103-08pm' name='works' type='radio'>
     <div class="relative">
-      <label for='1103-08pm'>Senator Wendy Davis <a href="https://twitter.com/WendyDavisTexas/status/349377348103188481">announces the SB5 vote</a> and asks for people to <a href=">share their stories</a< so she "can tell it from the Senate floor."</label>
+      <label for='1103-08pm'>Senator Wendy Davis <a href="https://twitter.com/WendyDavisTexas/status/349377348103188481">announces the SB5 vote</a> and asks for people to <a href="https://twitter.com/WendyDavisTexas/status/349378485099307009">share their stories</a> so she "can tell it from the Senate floor."</label>
       <span class='date'>11:03-11:08 PM, 24 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p></p></div>
