--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -6,17 +5,8 @@
 
   <meta charset="UTF-8">
 
-  <!--
-Copyright (c) 2013 by Elizabeth Yalkut (http://codepen.io/elizabethyalkut/pen/iames)
 
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
--->
-
-  <title>wendyclock sketch - CodePen</title>
+  <title>WendyClock</title>
 
   <link rel='stylesheet' type='text/css' href='assets/stylesheets/screen.css' /> 
 
@@ -40,7 +30,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 <body>
 
-  <h2>wendyclock</h2>
+  <h2>WendyClock</h2>
 <ul id='timeline'>
 <li class='work'>
     <input class='radio' id='428am' name='works' type='radio'>
@@ -85,7 +75,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='1205am'>Texas Tribune <a href="https://twitter.com/TexasTribune/status/349755256944599040">reports</a> that the vote on SB5 was 17-12, according to Sen. Deuell.</label>
       <span class='date'>12:05 AM, 26 June 2013</span>
-      <span class='circle'></span>
+      <span class='circle'></span></div>>
     <div class="content"><p></p></div>
     </div>
   </li>
@@ -106,7 +96,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='1159pm'>Tweets about the filibuster peak at 4900 tweets in the one-minute period between 11:59 PM and midnight.</label>
       <span class='date'>11:59 PM, 25 June 2013</span>
-      <span class='circle'></span>
+      <span class='circle'></span></div>>
     <div class="content"><p>Tweet volume <a href="https://twitter.com/gov/status/349765191128461312">reported</a> at 12:44AM, 26 June 2013, by <a href="https://twitter.com/gov/">@gov</a>, the Twitter Government and Politics Team.</p></div>
     </div>
   </li>
@@ -115,7 +105,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='1156pm-a'>Screaming from the gallery drowns out action on the floor, preventing a vote</label>
       <span class='date'>11:56 PM, 25 June 2013</span><!-- source: https://twitter.com/MorganSmith/status/349753006809546752 -->
-      <span class='circle'></span>
+      <span class='circle'></span></div>>
     <div class="content"><p></p></div>
     </div>
   </li>
@@ -124,7 +114,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <div class="relative">
       <label for='1156pm'>CNN reporting on blueberry muffins instead of filibuster.</label>
       <span class='date'>11:56 PM, 25 June 2013</span>
-      <span class='circle'></span>
+      <span class='circle'></span></div>>
     <div class="content"><p>Elizabeth Plank provides <a href="https://twitter.com/feministabulous/status/349753120043188225">screencap</a> of CNN with blueberry muffin headline.</p></div>
     </div>
   </li>
@@ -274,9 +264,7 @@ brace.</label>
   </li>
 -->
 </ul>
-      <footer><p>Timeline CSS forked from <a href="http://codepen.io/P233/pen/lGewF">Peiwen Lu</a>. Able research assistance from Tristan. A project of the <a href="http://irregulargentlewomen.github.io">Irregular Gentlewomen</a>. Distributed under the <a href="http://creativecommons.org/licenses/GPL/3.0/">GPL</a>.</p></footer>
-
-  <script src=""></script>
+      <footer><p>A project of the <a href="http://irregulargentlewomen.github.io">Irregular Gentlewomen</a>. Distributed under the <a href="http://creativecommons.org/licenses/GPL/3.0/">GPL</a>.</p></footer>
 
   <script>
     if (document.location.search.match(/type=embed/gi)) {
