--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <li class='work'>
     <input class='radio' id='114am' name='works' type='radio'>
     <div class="relative">
-      <label for='114am'>Becca Aaronson posts a <a href="pic.twitter.com/r7mdQXSu3J">picture</a> of hardcopy documents corroborating the altered date of the SB5 vote.</label>
+      <label for='114am'>Becca Aaronson posts a <a href="pic.twitter.com/r7mdQXSu3J">picture</a> of hardcopy corroborating the alteration of vote date.</label>
       <span class='date'>1:14 AM, 26 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p>The picture, Aaronson <a href="https://twitter.com/becca_aa/status/349772548269027328">tweets</a>, is of Congressman Ruben Hinojosa holding up the documents.</p></div>
@@ -73,10 +73,10 @@
   <li class='work'>
     <input class='radio' id='1205am' name='works' type='radio'>
     <div class="relative">
-      <label for='1205am'>Texas Tribune <a href="https://twitter.com/TexasTribune/status/349755256944599040">reports</a> that the vote on SB5 was 17-12, according to Sen. Deuell.</label>
+      <label for='1205am'>Texas Tribune <a href="https://twitter.com/TexasTribune/status/349755256944599040">reports</a> that the vote on SB5 was 17-12.</label>
       <span class='date'>12:05 AM, 26 June 2013</span>
       <span class='circle'></span></div>>
-    <div class="content"><p></p></div>
+    <div class="content"><p>Their source is <a href="http://www.deuell.senate.state.tx.us/">Senator Robert Duell</a>.</p></div>
     </div>
   </li>
   <li class='work'>
@@ -94,7 +94,7 @@
 <li class='work'>
     <input class='radio' id='1159pm' name='works' type='radio'>
     <div class="relative">
-      <label for='1159pm'>Tweets about the filibuster peak at 4900 tweets in the one-minute period between 11:59 PM and midnight.</label>
+      <label for='1159pm'>Tweets about the filibuster peak at 4900 between 11:59 PM and midnight.</label>
       <span class='date'>11:59 PM, 25 June 2013</span>
       <span class='circle'></span></div>>
     <div class="content"><p>Tweet volume <a href="https://twitter.com/gov/status/349765191128461312">reported</a> at 12:44AM, 26 June 2013, by <a href="https://twitter.com/gov/">@gov</a>, the Twitter Government and Politics Team.</p></div>
@@ -103,10 +103,10 @@
   <li class='work'>
     <input class='radio' id='1156pm-a' name='works' type='radio'>
     <div class="relative">
-      <label for='1156pm-a'>Screaming from the gallery drowns out action on the floor, preventing a vote</label>
-      <span class='date'>11:56 PM, 25 June 2013</span><!-- source: https://twitter.com/MorganSmith/status/349753006809546752 -->
+      <label for='1156pm-a'>Vote prevented by screaming from the gallery</label>
+      <span class='date'>11:56 PM, 25 June 2013</span>
       <span class='circle'></span></div>>
-    <div class="content"><p></p></div>
+    <div class="content"><p>Source: <a href="https://twitter.com/MorganSmith/status/349753006809546752">Morgan Smith</a>.</p></div>
     </div>
   </li>
   <li class='work'>
@@ -125,17 +125,16 @@
       <span class='date'>11:45 PM, 25 June 2013</span>
       <span class='circle'></span>
     </div>
-      <div class="content" style="padding-bottom:30px;"><p></p></div>
+      <div class="content" style="padding-bottom:30px;"></div>
   </li>
   
   <li class='work'>
     <input class='radio' id='1138pm' name='works' type='radio'>
     <div class="relative">
-      <label for='1138pm'>Senator Van De Putte moves to adjourn and is ignored. <!--source: 
-https://twitter.com/TheVaginaZine/status/349748549694652416 --></label>
+      <label for='1138pm'>Senator Van De Putte moves to adjourn and is ignored.</label>
       <span class='date'>11:38 PM, 25 June 2013</span>
       <span class='circle'></span></div>
-    <div class="content"><p></p></div>
+    <div class="content"><p>Source: <a href="https://twitter.com/TheVaginaZine/status/349748549694652416">@TheVaginaZine</a>.</p></div>
     </div>
   </li>
 <li class='work'>
@@ -144,7 +143,7 @@ https://twitter.com/TheVaginaZine/status/349748549694652416 --></label>
       <label for='1109pm'>Senator Kirk Watson begins closing, filibusters the end of the filibuster.</label>
       <span class='date'>11:09 PM, 25 June 2013</span>
       <span class='circle'></span></div>
-    <div class="content"><p><!--source: https://twitter.com/djambrek/status/349741154599829504 --></p></div>
+    <div class="content"><p>Source: <a href="https://twitter.com/djambrek/status/349741154599829504">Dylan Jambrek</a>.</p></div>
     </div>
   </li>  
   
@@ -154,32 +153,22 @@ https://twitter.com/TheVaginaZine/status/349748549694652416 --></label>
       <label for='1106pm'>The doors to the Texas legislature are locked, barring over 200 people from entry.</label>
       <span class='date'>11:06 PM, 25 June 2013</span>
       <span class='circle'></span></div>
-    <div class="content"><p><!--source: https://twitter.com/SandiesPACk/status/349740440687345664 --></p></div>
+    <div class="content"><p>Source: <a href="https://twitter.com/SandiesPACk/status/349740440687345664"> Sandie's PACk</a>.</p></div>
     </div>
   </li>
 <li class='work'>
     <input class='radio' id='1104pm' name='works' type='radio'>
     <div class="relative">
-      <label for='1104pm'>The rotunda at the legislature is <a href="pic.twitter.com/fGLy74e98M">filled with supporters</a> wearing orange.</label>
+      <label for='1104pm'>The rotunda at the legislature is <a href="pic.twitter.com/fGLy74e98M">filled with supporters</a>.</label>
       <span class='date'>11:04 PM, 25 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p>Sen. Leticia Van De Putte <a href="https://twitter.com/leticiavdp/status/349740007977787393">tweets</a> the picture showing the support for Sen. Davis's filibuster.</p></div>
     </div>
   </li>
-    <li class='work'>
-    <input class='radio' id='1045pm' name='works' type='radio'>
-    <div class="relative">
-      <label for='1045pm'>DPS locked the Capitol doors</label>
-      <span class='date'>10:45 PM, 25 June 2013</span>
-      <span class='circle'></span>
-    </div>
-          <div class="content"><p></p></div>
-  </li>
-
 <li class='work'>
     <input class='radio' id='1003pm' name='works' type='radio'>
     <div class="relative">
-      <label for='1003pm'>With a third point of order sustained against her, Senator Davis' filibuster is brought to an end.</label>
+      <label for='1003pm'>Sen. Davis's filibuster ends with a 3<sup>rd</sup> point of order brought against her.</label>
       <span class='date'>10:03 PM, 25 June 2013</span>
       <span class='circle'></span>
     </div>
@@ -189,8 +178,7 @@ https://twitter.com/TheVaginaZine/status/349748549694652416 --></label>
 <li class='work'>
     <input class='radio' id='934pm' name='works' type='radio'>
     <div class="relative">
-      <label for='934pm'>A point of order is called as to the germaineness of Senator Davis' references to a 2011 bill 
-regarding the use of sonograms in abortions.</label>
+      <label for='934pm'>Sen. Davis references a 2011 bill on sonogram use in abortions. A point of order is called.</label>
       <span class='date'>9:34 PM, 25 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p></p></div>
@@ -200,7 +188,7 @@ regarding the use of sonograms in abortions.</label>
   <li class='work'>
     <input class='radio' id='840pm' name='works' type='radio'>
     <div class="relative">
-      <label for='840pm'>President Obama <a href="">tweets</a> in support of Senator Davis.</label>
+      <label for='840pm'>President Obama <a href="https://twitter.com/BarackObama/status/349703625616011264">tweets</a> in support of Senator Davis.</label>
       <span class='date'>8:40 PM, 25 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p>He comments that "Something special is happening in Austin tonight."</p></div>
@@ -210,8 +198,7 @@ regarding the use of sonograms in abortions.</label>
   <li class='work'>
     <input class='radio' id='638pm' name='works' type='radio'>
     <div class="relative">
-      <label for='638pm'>Point of Order called regarding the assistance Senator Davis received in putting on a back 
-brace.</label>
+      <label for='638pm'>A point of order called regarding the assistance Senator Davis received in putting on a back brace.</label>
       <span class='date'>6:38 PM, 25 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p></p></div>
@@ -221,7 +208,7 @@ brace.</label>
   <li class='work'>
     <input class='radio' id='533pm' name='works' type='radio'>
     <div class="relative">
-      <label for='533pm'>Second point of order called; later overruled</label>
+      <label for='533pm'>Second point of order called; later overruled.</label>
       <span class='date'>5:33 PM, 25 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p></p></div>
@@ -233,7 +220,7 @@ brace.</label>
   <li class='work'>
     <input class='radio' id='1118am' name='works' type='radio'>
     <div class="relative">
-      <label for='1118am'>Filibuster begins</label>
+      <label for='1118am'>Sen. Davis begins filibustering.</label>
       <span class='date'>11:18 AM, 25 June 2013</span>
       <span class='circle'></span>
     </div>
