fixing stray >> -- this is why you don't change text editors in the middle of projects, kids.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="relative">
       <label for='1205am'>Texas Tribune <a href="https://twitter.com/TexasTribune/status/349755256944599040">reports</a> that the vote on SB5 was 17-12.</label>
       <span class='date'>12:05 AM, 26 June 2013</span>
-      <span class='circle'></span></div>>
+      <span class='circle'></span></div>
     <div class="content"><p>Their source is <a href="http://www.deuell.senate.state.tx.us/">Senator Robert Duell</a>.</p></div>
     </div>
   </li>
@@ -96,7 +96,7 @@
     <div class="relative">
       <label for='1159pm'>Tweets about the filibuster peak at 4900 between 11:59 PM and midnight.</label>
       <span class='date'>11:59 PM, 25 June 2013</span>
-      <span class='circle'></span></div>>
+      <span class='circle'></span></div>
     <div class="content"><p>Tweet volume <a href="https://twitter.com/gov/status/349765191128461312">reported</a> at 12:44AM, 26 June 2013, by <a href="https://twitter.com/gov/">@gov</a>, the Twitter Government and Politics Team.</p></div>
     </div>
   </li>
@@ -105,7 +105,7 @@
     <div class="relative">
       <label for='1156pm-a'>Vote prevented by screaming from the gallery</label>
       <span class='date'>11:56 PM, 25 June 2013</span>
-      <span class='circle'></span></div>>
+      <span class='circle'></span></div>
     <div class="content"><p>Source: <a href="https://twitter.com/MorganSmith/status/349753006809546752">Morgan Smith</a>.</p></div>
     </div>
   </li>
@@ -114,7 +114,7 @@
     <div class="relative">
       <label for='1156pm'>CNN reporting on blueberry muffins instead of filibuster.</label>
       <span class='date'>11:56 PM, 25 June 2013</span>
-      <span class='circle'></span></div>>
+      <span class='circle'></span></div>
     <div class="content"><p>Elizabeth Plank provides <a href="https://twitter.com/feministabulous/status/349753120043188225">screencap</a> of CNN with blueberry muffin headline.</p></div>
     </div>
   </li>
