--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="relative">
       <label for='1205am'>Texas Tribune <a href="https://twitter.com/TexasTribune/status/349755256944599040">reports</a> that the vote on SB5 was 17-12.</label>
       <span class='date'>12:05 AM, 26 June 2013</span>
-      <span class='circle'></span></div>>
+      <span class='circle'></span></div>
     <div class="content"><p>Their source is <a href="http://www.deuell.senate.state.tx.us/">Senator Robert Duell</a>.</p></div>
     </div>
   </li>
@@ -105,7 +105,7 @@
     <div class="relative">
       <label for='1156pm-a'>Vote prevented by screaming from the gallery</label>
       <span class='date'>11:56 PM, 25 June 2013</span>
-      <span class='circle'></span></div>>
+      <span class='circle'></span></div>
     <div class="content"><p>Source: <a href="https://twitter.com/MorganSmith/status/349753006809546752">Morgan Smith</a>.</p></div>
     </div>
   </li>
