data addition 1008pm

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <li class='work'>
     <input class='radio' id='1106pm' name='works' type='radio'>
     <div class="relative">
-      <label for='1106pm'>The doors to the Texas legislature are locked, barring over 200 people from entry.</label>
+      <label for='1106pm'>The doors to the Texas legislature remain locked, barring over 200 people from entry.</label>
       <span class='date'>11:06 PM, 25 June 2013</span>
       <span class='circle'></span></div>
     <div class="content"><p>Source: <a href="https://twitter.com/SandiesPACk/status/349740440687345664"> Sandie's PACk</a>.</p></div>
@@ -165,6 +165,34 @@
     <div class="content"><p>Sen. Leticia Van De Putte <a href="https://twitter.com/leticiavdp/status/349740007977787393">tweets</a> the picture showing the support for Sen. Davis's filibuster.</p></div>
     </div>
   </li>
+  <li class='work'>
+    <input class='radio' id='1045pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1045pm'>Heather Parker contacts Sen. Kirk Watson's office, who pass along the information she found about germaneness.</label>
+      <span class='date'>10:45 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p>Sen. Zaffirini brought up this point for debate, further stalling the proceedings.</p></div>
+    </div><!--source: http://www.dailydot.com/politics/twitter-germane-texas-abortion-filibuster-rule/ -->
+  </li>
+  <li class='work'>
+    <input class='radio' id='1013pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1013pm'>Heather Parker <a href="https://twitter.com/heatherr_parker/statuses/349727068638019585">tweets</a> regarding germaneness vs. decorum in relation to the three warnings rule.</label>
+      <span class='date'>10:13 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p>According to this rule, Sen. Davis's second warning, for receiving assistance with her back brace, should not have counted against her three strikes.</p></div>
+    </div><!--source: http://www.dailydot.com/politics/twitter-germane-texas-abortion-filibuster-rule/ -->
+  </li>
+  <li class='work'>
+    <input class='radio' id='1012pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='1012pm'>Sen. Van De Putte, having arrived after her father's funeral, requests clarification on the three points of order.</label>
+      <span class='date'>10:12 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p></p></div>
+    </div>
+  </li>
+  
 <li class='work'>
     <input class='radio' id='1003pm' name='works' type='radio'>
     <div class="relative">
@@ -194,6 +222,18 @@
     <div class="content"><p>He comments that "Something special is happening in Austin tonight."</p></div>
     </div>
   </li>
+  
+  
+  <li class='work'>
+    <input class='radio' id='653pm' name='works' type='radio'>
+    <div class="relative">
+      <label for='653pm'>Sen. Judith Zaffirini notes the gendered language of the rules imply they do not apply to Sen. Davis.</label>
+      <span class='date'>6:53 PM, 25 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content"><p>As she states: "may not lean on <em>his</em> desk, <em>his</em> chair, and that not doesn't apply to Sen. Davis."</p></div>
+    </div>
+  </li><!-- source: http://trailblazersblog.dallasnews.com/2013/06/wendy-davis-begins-filibuster-to-stop-omnibus-abortion-bill.html/ -->
+
   
   <li class='work'>
     <input class='radio' id='638pm' name='works' type='radio'>
