--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <label for='638pm'>A point of order called regarding the assistance Senator Davis received in putting on a back brace.</label>
       <span class='date'>6:38 PM, 25 June 2013</span>
       <span class='circle'></span></div>
-    <div class="content"><p></p></div>
+    <div class="content" style="padding-bottom:30px;"><p></p></div>
     </div>
   </li>
   
@@ -235,7 +235,7 @@
       <label for='1103-08pm'>Senator Wendy Davis <a href="https://twitter.com/WendyDavisTexas/status/349377348103188481">announces the SB5 vote</a> and asks for people to <a href="https://twitter.com/WendyDavisTexas/status/349378485099307009">share their stories</a> so she "can tell it from the Senate floor."</label>
       <span class='date'>11:03-11:08 PM, 24 June 2013</span>
       <span class='circle'></span></div>
-    <div class="content"><p></p></div>
+    <div class="content" style="padding-bottom:30px;"><p></p></div>
     </div>
   </li>
 
