adding reference to new session

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
 
   <h2>WendyClock</h2>
 <ul id='timeline'>
+  <li class='work'>
+    <input class='radio' id='dayafter' name='works' type='radio'>
+    <div class="relative">
+      <span class='date'>26 June 2013</span>
+      <span class='circle'></span></div>
+    <div class="content">
+      <label for='dayafter'>Texas Governor Rick Perry calls for another special session to pass SB5</label>
+      <p>The session will begin on July 1st and run for 30 days. <a href="http://www.cbsnews.com/8301-250_162-57591221/texas-gov-rick-perry-calls-2nd-special-session-to-pass-abortion-bill/">source</a></p>
+    </div>
+  </li>
 <li class='work'>
     <input class='radio' id='428am' name='works' type='radio'>
     <div class="relative">
